tests/enumerror/enumerror.exp
Error ------------------------------------------------------- enumerror.js:10:18

Property `PAUSE` is missing in object type.


Error ------------------------------------------------------- enumerror.js:20:19

Property `PAUSE` is missing in `typeof MyStates`.



Found 2 errors
